fixed border boxes under pics on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -494,7 +494,7 @@ body {
 }
 @media only screen and (max-width: 500px) {
   .container .main-section .recent-projects .outskirt-heading h3 {
-    margin-left: 30px;
+    margin-left: 50px;
     position: absolute;
     bottom: -65px;
     right: "";
@@ -567,7 +567,7 @@ body {
     margin-left: 30px;
     position: absolute;
     bottom: -65px;
-    right: 15px;
+    right: 45px;
     left: "";
     font-weight: bold;
     letter-spacing: 5px;
