--- a/less/Home/Home.less
+++ b/less/Home/Home.less
@@ -230,7 +230,8 @@
                 h3 {
                     .img-heading(@left: 0px, @bottom: -25px, @width: 250px);
                     @media @mobile {
-                        margin-left: 30px;
+                        margin-left: 50px;
+                        // margin-left: 30px removed 
                         .img-heading(@left: -13px, @bottom: -65px);
                         // removed from above img-heading       ^^^ @width: 400px
                     }
@@ -268,8 +269,8 @@
                     .img-heading(@right: -65px, @bottom: -25px, @width: 250px);
                     @media @mobile {
                         margin-left: 30px;
-                        .img-heading(@right: 15px, @bottom: -65px,@width: 260px);
-                        // removed from above img-heading         ^^^400px before
+                        .img-heading(@right: 45px, @bottom: -65px,@width: 260px);
+                        // removed from above img-heading right:15px;
                     }
                 }
             }
